メッセージ定義ファイルのUTF-8日本語ファイル化

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,29 +1,24 @@
-i.ex.0001={0}\u30c6\u30fc\u30d6\u30eb\u4f5c\u6210\u6e08
-i.ex.0002={0}\u30c6\u30fc\u30d6\u30eb\u521d\u56de\u4f5c\u6210
-w.ex.2001=\u5bfe\u8c61\u306eTodo\u304c\u3042\u308a\u307e\u305b\u3093\u3002
-w.ex.2002={0}\u4ef6\u4ee5\u4e0a\u306eTodo\u304c\u672a\u5b8c\u4e86\u306e\u305f\u3081\u65b0\u3057\u3044Todo\u306f\u4f5c\u6210\u3067\u304d\u307e\u305b\u3093\u3002
-w.ex.2003=Todo(ID={0})\u306f\u3059\u3067\u306b\u5b8c\u4e86\u3057\u3066\u3044\u307e\u3059\u3002
-w.ex.2004=Todo(Title={0})\u306e\u4f5c\u6210\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
-w.ex.2005=Todo(ID={0})\u306e\u66f4\u65b0\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
-w.ex.2006=Todo(ID={0})\u306e\u524a\u9664\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
-w.ex.5001=\u5165\u529b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
-e.ex.9001=\u30b7\u30b9\u30c6\u30e0\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
+w.ex.2001=対象のTodoがありません。
+w.ex.2002={0}件以上のTodoが未完了のため新しいTodoは作成できません。
+w.ex.2003=Todo(ID={0})はすでに完了しています。
+w.ex.5001=入力エラーが発生しました。
+e.ex.9001=システムエラーが発生しました。
 
 # =================================================
-# \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u30a8\u30e9\u30fc\u30e1\u30c3\u30bb\u30fc\u30b8
+# バリデーションエラーメッセージ
 # =================================================
 
-#\u30d5\u30a3\u30fc\u30eb\u30c9\u540d
-todoTitle=Todo\u30bf\u30a4\u30c8\u30eb
+#フィールド名
+todoTitle=Todoタイトル
 
-#\u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u30a8\u30e9\u30fc\u30e1\u30c3\u30bb\u30fc\u30b8
-typeMismatch.int=\u6570\u5024\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
-typeMismatch.java.util.Date=yyyy/MM/dd\u5f62\u5f0f\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
+#バリデーションエラーメッセージ
+typeMismatch.int=数値を入力してください
+typeMismatch.java.util.Date=yyyy/MM/dd形式で入力してください
 
-NotBlank={0}\u306f\u5fc5\u9808\u5165\u529b\u3067\u3059\u3002
-NotNull={0}\u306f\u5fc5\u9808\u5165\u529b\u3067\u3059\u3002
-Email={0}\u306f\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u5f62\u5f0f\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-Size={0}\u306f\u3001{2}\u6841\u4ee5\u4e0a\u3001{1}\u6841\u4ee5\u4e0b\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-FixedLength={0}\u306f\u3001{1}\u6841\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-Min={0}\u306f{1}\u4ee5\u4e0a\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-Max={0}\u306f{1}\u4ee5\u4e0b\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+NotBlank={0}は必須入力です。
+NotNull={0}は必須入力です。
+Email={0}はメールアドレス形式で入力してください。
+Size={0}は、{2}桁以上、{1}桁以下で入力してください。
+FixedLength={0}は、{1}桁で入力してください。
+Min={0}は{1}以上を入力してください。
+Max={0}は{1}以下を入力してください。
