--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
+i.ex.0001={0}テーブルは存在します。
+i.ex.0002={0}テーブルを作成しました。
 w.ex.2001=対象のTodoがありません。
 w.ex.2002={0}件以上のTodoが未完了のため新しいTodoは作成できません。
 w.ex.2003=Todo(ID={0})はすでに完了しています。
