--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,6 +15,7 @@ e.ex.9001=システムエラーが発生しました。
 # =================================================
 
 #フィールド名
+todoId=Todo ID
 todoTitle=Todoタイトル
 
 #バリデーションエラーメッセージ
@@ -25,6 +26,7 @@ jakarta.validation.constraints.Min.message={0}は{value}以上を入力してく
 jakarta.validation.constraints.Max.message={0}は{1}以下を入力してください。
 org.hibernate.validator.constraints.Range.message={0}は{min}以上{max}以下で入力してください。
 jakarta.validation.constraints.Email.message={0}はメールアドレス形式で入力してください。
+org.hibernate.validator.constraints.UUID.message={0}はUUID形式で入力してください。
 
 # カスタム単項目チェックエラーメッセージ
 com.example.fw.common.validation.FixedLength.message={0}は{value}文字で入力してください。
