--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,7 +3,7 @@ i.ex.0002={0}テーブルを作成しました。
 w.ex.2001=対象のTodoがありません。
 w.ex.2002={0}件以上のTodoが未完了のため新しいTodoは作成できません。
 w.ex.2003=Todo(ID={0})はすでに完了しています。
-w.ex.5001=入力エラーが発生しました。
+w.ex.5001={0}は入力エラーです。
 w.ex.5002=データ形式が正しくありません。
 w.ex.5003={0}[{1}]のデータ形式が正しくありません。
 w.ex.5004={0}のデータ形式が正しくありません。
@@ -13,7 +13,8 @@ e.ex.9001=システムエラーが発生しました。
 # =================================================
 # バリデーションエラーメッセージ
 # =================================================
-
+#オブジェクト名
+todoResource=Todo情報
 #フィールド名
 todoId=Todo ID
 todoTitle=Todoタイトル
