--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,10 +3,14 @@ i.ex.0002={0}テーブルを作成しました。
 w.ex.2001=対象のTodoがありません。
 w.ex.2002={0}件以上のTodoが未完了のため新しいTodoは作成できません。
 w.ex.2003=Todo(ID={0})はすでに完了しています。
-w.ex.5001={0}は入力エラーです。
+w.ex.2004=Todo(Title={0})の作成に失敗しました。
+w.ex.2005=Todo(Title={0})の更新に失敗しました。
+w.ex.2006=Todo(Title={0})の削除に失敗しました。
+w.ex.5001=入力エラーです。
 w.ex.5002=データ形式が正しくありません。
 w.ex.5003={0}[{1}]のデータ形式が正しくありません。
 w.ex.5004={0}のデータ形式が正しくありません。
+w.ex.5005={0}は入力エラーです。
 
 e.ex.9001=システムエラーが発生しました。
 
