集約例外ハンドリングの不具合修正

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,8 +13,13 @@ e.ex.9001=システムエラーが発生しました。
 # =================================================
 # バリデーションエラーメッセージ
 # =================================================
-#オブジェクト名
+#Resourceのオブジェクト名
 todoResource=Todo情報
+#Resourceのクラス名
+#TodoResource=Todo情報1
+#ResourceのFQDN
+#com.example.backend.app.api.todo.TodoResource=Todo情報2
+
 #フィールド名
 todoId=Todo ID
 todoTitle=Todoタイトル
