DynamoDBトランザクションエラーの実装例修正

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ w.ex.5004=Todo(Title={0})の作成に失敗しました。
 w.ex.5005=Todo(Title={0})の更新に失敗しました。
 w.ex.5006=Todo(Title={0})の削除に失敗しました。
 e.ex.9001=システムエラーが発生しました。
+e.ex.9002=予期せぬトランザクション競合が発生しました。
 
 # =================================================
 # バリデーションエラーメッセージ
